# stockpredapp

./: README.md  dashboard.py  flask_app.py  pyproject.toml  requirements.txt
group_code/NeuralNetwork/: Predictor.py  TerminalApp.py  functions.py  get_data.py  model_training.py  tickers.csv
group_code/NeuralNetwork/data/: test_data.npy  test_targets.npy  train_targets.npy
group_code/NeuralNetwork/trained_model/: model.json  weights.h5
group_code/SentimentAnalysis/: cleanseTweets.py  scrapeTweets.py  sentimentAnalyze.py  sentiment_df.csv
group_code/SummaryStatistics/: app.py
group_code/SummaryStatistics/static/styles/: styles.css
group_code/TradingStyles/: dash_app.py
static/css/: index.css  john.css  trend_prediction.css
templates/: README.html  andrew.html  base.html  john.html  trend_prediction.html  zach.html
