[tool.poetry]
name = "hw0-environment"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^11.3.0"
tweepy = "^4.8.0"
langdetect = "^1.0.9"
Flask = "^2.1.2"
pandas = "^1.4.2"
plotly = "^5.7.0"
python-dotenv = "^0.20.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
